WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301833
[JSC] Assert arguments of `CachedCall::callWithArguments` using `Integrity::auditCell`
https://bugs.webkit.org/show_bug.cgi?id=301833
Summary
[JSC] Assert arguments of `CachedCall::callWithArguments` using `Integrity::a...
Sosuke Suzuki
Reported
2025-11-02 17:18:25 PST
This patch changes to assert arguments of `CachedCall:callWithArguments` using `Integrity::auditCell`. Also, following the best practice that `**Inlines.h` should not be included from any header file other than `**Inlines.h`[1], this patch creates a new `CachedCallInlines.h`. [1]:
https://github.com/WebKit/WebKit/wiki/Analyzing-Build-Performance#avoid-including-inlinesh-headers-in-other-headers
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2025-11-02 17:47:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53318
Radar WebKit Bug Importer
Comment 2
2025-11-09 17:19:10 PST
<
rdar://problem/164370278
>
EWS
Comment 3
2025-11-13 06:34:47 PST
Committed
302981@main
(d4a934d34478): <
https://commits.webkit.org/302981@main
> Reviewed commits have been landed. Closing PR #53318 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug