[JSC] Assert arguments of `CachedCall::callWithArguments` using `Integrity::auditCell` https://bugs.webkit.org/show_bug.cgi?id=301833

Reviewed by Yusuke Suzuki.

This patch changes to assert arguments of `CachedCall:callWithArguments` using `Integrity::auditCell`.

Also, following the best practice that `**Inlines.h` should not be included from any header file other
than `**Inlines.h`[1], this patch creates a new `CachedCallInlines.h`.

[1]: https://github.com/WebKit/WebKit/wiki/Analyzing-Build-Performance#avoid-including-inlinesh-headers-in-other-headers

* Source/JavaScriptCore/CMakeLists.txt:
* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
* Source/JavaScriptCore/interpreter/CachedCall.h:
(JSC::CachedCall::callWithArguments): Deleted.
* Source/JavaScriptCore/interpreter/CachedCallInlines.h: Added.
(JSC::CachedCall::callWithArguments):
* Source/JavaScriptCore/runtime/ArrayPrototype.cpp:
* Source/JavaScriptCore/runtime/IteratorOperations.h:
* Source/JavaScriptCore/runtime/JSGenericTypedArrayViewPrototypeFunctions.h:
* Source/JavaScriptCore/runtime/JSIteratorPrototype.cpp:
* Source/JavaScriptCore/runtime/MapPrototype.cpp:
* Source/JavaScriptCore/runtime/RegExpPrototype.cpp:
* Source/JavaScriptCore/runtime/SetPrototype.cpp:
* Source/JavaScriptCore/runtime/StringPrototypeInlines.h:
* Source/JavaScriptCore/runtime/WeakMapPrototype.cpp:
* Source/JavaScriptCore/tools/IntegrityInlines.h:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/302981@main